gap fix

--- a/src/app/project-section/project-section.component.scss
+++ b/src/app/project-section/project-section.component.scss
@@ -41,7 +41,8 @@
 
 .technologies-container {
   display: flex;
-  gap: 7px;
+  flex-wrap: wrap;
+  gap: 20px 8px;
   justify-content: center;
   padding-top: 25px;
   padding-bottom: 35px;
